# lexical-algorithm-bench

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml  input.rs  random.rs  random_u16.rs  random_u32.rs  random_u64.rs  random_u8.rs
src/: alexandrescu.rs  jeaiii.rs  lib.rs  naive.rs  shared.rs
tests/: algorithm_tests.proptest-regressions  algorithm_tests.rs
